修改专利查询和用户专利接口